# Code-Bazaar

games/minesweeper/: CMakeLists.txt  minesweeper.cpp  minesweeper.h
qset/chassisUSB/: CMakeLists.txt  chassis_board.cpp  chassis_board.h
qset/chassisUSB/dependencies/: usb_chassis_defs.h  usb_dev.h  usb_packet.h
